hw-detect (1.55) UNRELEASED; urgency=low

  * Only ask PCMCIA resource question at low priority as we've not seen any
    installation reports mentioning that issue in a long time.

 -- Frans Pop <fjp@debian.org>  Sun, 22 Jul 2007 11:54:11 +0200

hw-detect (1.54) unstable; urgency=low

  [ Joey Hess ]
  * Remove cruft left over from the days of pcmcia-cs.
    - pcmciautils doesn't create a cardmgr.pid, so stop looking for it to
      determine if pcmcia is started. Look for the pcmcia_core module being
      loaded  instead.
    - No need for funky redirections when running the init script as it no
      longer starts a daemon.
    - /var/run/stab was only produced by pcmcia-cs, so the whole
      gen_pcmcia_devnames section can no longer run; remove.
    - Only modify config.opts in /target if pcmcia_resources is preseeded.
  * Remove workaround for long fixed cdebconf bug.

  [ Frans Pop ]
  * disk-detect: detect Serial ATA RAID disks if requested by setting
    disk-detect/dmraid/enable at the boot prompt. Closes: #405484.
    Thanks to Criss Carr for all the information he has provided, much of
    which has been used in implementing the experimental dmraid support
    available with this release of hw-detect and other components. Also
    thanks to Jérémy Bobbio for his patches and Mark Brown for providing
    a test system.

  [ Updated translations ]
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Russian (ru.po) by Yuri Kozlov

 -- Frans Pop <fjp@debian.org>  Fri, 06 Jul 2007 00:17:19 +0200

hw-detect (1.53) unstable; urgency=low

  [ Joey Hess ]
  * Install eject on systems that seem to have a CD drive. Previously, it
    was installed by cdrom-detect, only when installing from CD.

  [ Updated translations ]
  * Romanian (ro.po) by Eddy Petrișor

 -- Frans Pop <fjp@debian.org>  Mon, 21 May 2007 16:38:31 +0200

hw-detect (1.52) unstable; urgency=low

  * Code cleanup:
    - remove support for 2.4 series kernels
    - remove support for discover