@@ -1,9 +1,17 @@
 hw-detect (1.55) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Only ask PCMCIA resource question at low priority as we've not seen any
     installation reports mentioning that issue in a long time.
 
- -- Frans Pop <fjp@debian.org>  Sun, 22 Jul 2007 11:54:11 +0200
+  [ Joey Hess ]
+  * Linux 2.6.22 renames the firewire bus and modules from "1394" to
+    "firewire". Support the new module names.
+  * While eth1394 is not currently being built for 2.6.22, go ahead and modify
+    sysfs-update-devnames to recognise ethernet devices that point to
+    /sys/bus/firewire as firewire ethernet.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 26 Aug 2007 15:39:40 -0400
 
 hw-detect (1.54) unstable; urgency=low
 
